src/test/testData/highlighting/MissingTrailingComma.tx3
type State {
    owner: Address,
    <error descr="Missing trailing comma (required by Tx3)">value: Int</error>
}
